--- a/package.json
+++ b/package.json
@@ -14,13 +14,28 @@
     "build": "tsc && shx chmod +x dist/*.js",
     "start": "node dist/index.js",
     "watch": "tsc --watch",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "test": "echo \"Warning: No tests configured yet. Please add tests for better CI/CD.\" && exit 0",
+    "lint": "echo \"Warning: No linting configured yet. Consider adding ESLint.\" && exit 0",
+    "clean": "shx rm -rf dist",
+    "prepack": "npm run clean && npm run build"
   },
   "keywords": [
     "mcp",
     "memory",
-    "context"
+    "context",
+    "ai",
+    "assistant",
+    "model-context-protocol"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/IncomeStreamSurfer/roo-code-memory-bank-mcp-server.git"
+  },
+  "bugs": {
+    "url": "https://github.com/IncomeStreamSurfer/roo-code-memory-bank-mcp-server/issues"
+  },
+  "homepage": "https://github.com/IncomeStreamSurfer/roo-code-memory-bank-mcp-server#readme",
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
