--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pnocera/roo-memorybank-mcp",
+  "name": "roo-memorybank-mcp",
   "version": "1.0.4",
   "description": "MCP server for Roo Code Memory Bank functionality",
   "type": "module",
